maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:44: error: not found: value a
    			a=i;
                        ^JediEscaper:45: error: not found: value b
    			b=j;
                        ^JediEscaper:49: error: not found: value a
chemin(a,b);
       ^JediEscaper:49: error: not found: value b
chemin(a,b);
         ^