maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
	def chemin(x:Int,y:Int) {
    var i = getIndication(x,y);
    var a=0;
    var b=0;

    if (y!=0) {
        if (!aMurNord(x,y)) {
            if (getIndication(x,y-1)>=i) {
                setIndication(x,y-1,i+1);
                chemin(x,y-1);
            }
        }
    }
    if (y!=getMondeHauteur()-1) {
        if (!aMurNord(x,y+1)) {
            if (getIndication(x,y+1)>=i) {
                setIndication(x,y+1,i+1);
                chemin(x,y+1);
            }
        }
    }
    if (x!=0) {
        if (!aMurOuest(x,y)) {
            if (getIndication(x-1,y)>=i) {
                setIndication(x-1,y,i+1);
                chemin(x-1,y);
            }
        }
    }
    if (x!=getMondeLargeur()-1) {
        if (!aMurOuest(x+1,y)) {
            if (getIndication(x+1,y)>=i) {
                setIndication(x+1,y,i+1);
                chemin(x+1,y);
            }
        }
    }   
}
    for(i<- 0 to getMondeHauteur()-1){
    	for(j<- 0 to getMondeLargeur()-1){
    		if(aBiscuit(i,j)==true){
    			a=i;
    			b=j;
    		}
    	}
    }
chemin(a,b);
}
